@@ -1,60 +1,43 @@
 package org.jgroups.blocks;
 
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
+import org.jgroups.Address;
 import org.jgroups.Channel;
+import org.jgroups.Global;
 import org.jgroups.JChannel;
+import org.jgroups.tests.ChannelTestBase;
 import org.jgroups.util.Rsp;
 import org.jgroups.util.RspList;
 import org.jgroups.util.Util;
+import org.testng.annotations.AfterClass;
+import org.testng.annotations.BeforeClass;
+import org.testng.annotations.Test;
 
 import java.io.*;
 import java.util.Iterator;
 import java.util.Vector;
 
-
-public class RpcDispatcherSerializationTest extends TestCase {
+@Test(groups=Global.STACK_DEPENDENT,sequential=true)
+public class RpcDispatcherSerializationTest extends ChannelTestBase {
     private JChannel channel, channel2;
     private RpcDispatcher disp, disp2;
-    private String props=null;
+    private final Target target=new Target();
 
 
-    public RpcDispatcherSerializationTest(String testName) {
-        super(testName);
-    }
 
-
-    public void methodA(boolean b, long l) {
-        System.out.println("methodA(" + b + ", " + l + ") called");
-    }
-
-
-    public boolean methodB() {
-        return true;
-    }
-
-    public void methodC() {
-        throw new IllegalArgumentException("dummy exception - for testing only");
-    }
-
-
+    @BeforeClass
     protected void setUp() throws Exception {
-        super.setUp();
-        channel=new JChannel(props);
-        channel.setOpt(Channel.AUTO_RECONNECT, Boolean.TRUE);
-        disp=new RpcDispatcher(channel, null, null, this);
-        channel.connect("RpcDispatcherSerializationTestGroup");
+        channel=createChannel(true);
+        disp=new RpcDispatcher(channel, null, null, target);
+        channel.connect("RpcDispatcherSerializationTest");
 
-
-        channel2=new JChannel(props);
-        disp2=new RpcDispatcher(channel2, null, null, this);
-        channel2.connect("RpcDispatcherSerializationTestGroup");
+        channel2=createChannel(channel);
+        disp2=new RpcDispatcher(channel2, null, null, target);
+        channel2.connect("RpcDispatcherSerializationTest");
     }
 
 
+    @AfterClass
     protected void tearDown() throws Exception {
-        super.tearDown();
         channel2.close();
         disp2.stop();
 
@@ -62,12 +45,11 @@ public class RpcDispatcherSerializationTest extends TestCase {
         channel.close();
     }
 
-
-    public void testNonSerializableArgument() {
+    public void testNonSerializableArgument() throws Throwable {
         try {
             disp.callRemoteMethods(null, "foo", new Object[]{new NonSerializable()}, new Class[]{NonSerializable.class},
                                    GroupRequest.GET_ALL, 5000);
-            fail("should throw NotSerializableException");
+            throw new IllegalStateException("should throw NotSerializableException");
         }
         catch(Throwable t) {
             Throwable cause=t.getCause();
@@ -75,23 +57,22 @@ public class RpcDispatcherSerializationTest extends TestCase {
                 System.out.println("received RuntimeException with NotSerializableException as cause - this is expected");
             }
             else
-                fail("received " + t);
+                throw t;
         }
     }
 
     public void testTargetMethodNotFound() {
-        Vector members=channel.getView().getMembers();
+        Vector<Address> members=channel.getView().getMembers();
         System.out.println("members are: " + members);
         RspList rsps=disp.callRemoteMethods(members, "foo", null, new Class[]{String.class, String.class},
                                             GroupRequest.GET_ALL, 8000);
         System.out.println("responses:\n" + rsps + ", channel.view: " + channel.getView() + ", channel2.view: " + channel2.getView());
-        assertEquals(members.size(), rsps.size());
-        for(int i=0; i < rsps.size(); i++) {
-            Rsp rsp=(Rsp)rsps.elementAt(i);
-            assertTrue(rsp.getValue() instanceof NoSuchMethodException);
+        assert members.size() == rsps.size() : "expected " + members.size() + " responses, but got " + rsps + " (" + rsps.size() + ")";
+
+        for(Rsp rsp: rsps.values()) {
+            assert rsp.getValue() instanceof NoSuchMethodException : "response value is " + rsp.getValue();
         }
     }
-
 
     public void testMarshaller() {
         RpcDispatcher.Marshaller m=new MyMarshaller();
@@ -104,18 +85,18 @@ public class RpcDispatcherSerializationTest extends TestCase {
         rsps=disp.callRemoteMethods(null, "methodA", new Object[]{Boolean.TRUE, new Long(322649)},
                                     new Class[]{boolean.class, long.class},
                                     GroupRequest.GET_ALL, 0);
-        assertEquals(2, rsps.size());
-        for(Iterator it=rsps.values().iterator(); it.hasNext();) {
-            Rsp rsp=(Rsp)it.next();
-            assertNull(rsp.getValue());
+        assert rsps.size() == 2;
+        for(Iterator<Rsp> it=rsps.values().iterator(); it.hasNext();) {
+            Rsp rsp=it.next();
+            assert rsp.getValue() == null;
             assertTrue(rsp.wasReceived());
             assertFalse(rsp.wasSuspected());
         }
 
         rsps=disp.callRemoteMethods(null, "methodB", null, (Class[])null, GroupRequest.GET_ALL, 0);
         assertEquals(2, rsps.size());
-        for(Iterator it=rsps.values().iterator(); it.hasNext();) {
-            Rsp rsp=(Rsp)it.next();
+        for(Iterator<Rsp> it=rsps.values().iterator(); it.hasNext();) {
+            Rsp rsp=it.next();
             assertNotNull(rsp.getValue());
             assertEquals(Boolean.TRUE, rsp.getValue());
             assertTrue(rsp.wasReceived());
@@ -125,8 +106,8 @@ public class RpcDispatcherSerializationTest extends TestCase {
 
         rsps=disp.callRemoteMethods(null, "methodC", null, (Class[])null, GroupRequest.GET_ALL, 0);
         assertEquals(2, rsps.size());
-        for(Iterator it=rsps.values().iterator(); it.hasNext();) {
-            Rsp rsp=(Rsp)it.next();
+        for(Iterator<Rsp> it=rsps.values().iterator(); it.hasNext();) {
+            Rsp rsp=it.next();
             assertNotNull(rsp.getValue());
             assertTrue(rsp.getValue() instanceof Throwable);
             assertTrue(rsp.wasReceived());
@@ -185,7 +166,7 @@ public class RpcDispatcherSerializationTest extends TestCase {
                     case NULL:
                         return null;
                     case BOOL:
-                        return new Boolean(in.readBoolean());
+                        return Boolean.valueOf(in.readBoolean());
                     case LONG:
                         return new Long(in.readLong());
                     case OBJ:
@@ -200,15 +181,20 @@ public class RpcDispatcherSerializationTest extends TestCase {
         }
     }
 
+    static class Target {
+        public static void methodA(boolean b, long l) {
+            ;
+        }
 
-    public static Test suite() {
-        return new TestSuite(RpcDispatcherSerializationTest.class);
+        public static boolean methodB() {
+            return true;
+        }
+
+        public static void methodC() {
+            throw new IllegalArgumentException("dummy exception - for testing only");
+        }
     }
 
-
-    public static void main(String[] args) {
-        junit.textui.TestRunner.run(RpcDispatcherSerializationTest.suite());
-    }
 
     static class NonSerializable {
         int i;
